ratenyu/static/css/style.css
/* ... */
p.oauth-description {
  font-size: 18px;
  padding-bottom: 15px;
  display: inline-block;
  width: 50%;
}

button.oauth-button {
  text-align: right;
  color: black;
  width: 17%;
  padding: 10px;
  background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png') no-repeat left;
  background-size: 24px;
  background-origin: content-box;
}

.error-page {
  margin-top: 130px;
  text-align: center;
}

.error-page > h1{
  font-size: 50px;
}

.error-page > h2{
  font-size: 25px;
}
/* The container */
.container {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 18px;
  width: 18px;
  background-color: #eee;
  border-radius: 5px;
}

/* On mouse-over, add a grey background color */
.container:hover input ~ .checkmark {
  background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.container input:checked ~ .checkmark {
  background-color: #0a86e7;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.container .checkmark:after {
  left: 6px;
  top: 3px;
  bottom: 3px;
  width: 3px;
  height: 7px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

ul.result-side-links {
  float:left;
  display: inline;
  text-align: left;
  margin-bottom: 10px;
  padding-left: 20px;
  list-style: none;
  overflow-wrap: break-word;
  width:150px;
}

.result-side-links > li {
  padding-bottom: 20px;
}

/*put the dropdown for sorting under the name title, course id, course description, */
.result-dropdown {
    display: block;
    width: 70%;
    text-align: left;
    font-size: 14px;
    margin-bottom: -50px;
}

/*set appropriate width for the dropdown to fit all the text*/
#result-dropdown {
  width: 200px;
  font-size: 14px;
}

/*set appropriate area for the left panel on user profile*/
.user-panel{
  overflow:scroll;
  position: fixed;
  width: 264px;
  height: auto;
  left: 0px;
  top: 0;
  bottom: 0px;
  background: #350554;
  /* mix-blend-mode:multiply; */
}

/*set the user details area in user panel*/
.user-details{
position: relative;
width: 217px;
height: 49px;
left: 24px;
top: 45px;
padding-top: 20%;
font-size: 28px;
line-height: 20px;
text-align: center;
color: white;
}

/*set appropriate area for the user form*/
.user-form{
  width: 200px;
  /*height: 20%; Commented this because text was going out of the box while viewing profile.*/
  left: 24px;
  margin-top: 50%;
  text-align: center;
}

/*set appropriate area for the heading on user profile*/
h4.user-form {
  position: relative;
  display: inline-block;
  font-size: 15px;
  margin-left: 5%;
  margin-bottom: -15%;
  margin-top: 15%;
  color: white;
  text-align: left;
}

label.user-form{
  position: relative;
  display: inline-block;
  font-size: 15px;
  margin-left: 5%;
  margin-bottom: -15%;
  margin-top: 15%;
  color: white;
  text-align: left;
}

.edit-form{
  border: 2px solid white;
  margin-left: 28px;
  margin-top: 10px;
}

.edit-dropdown{
  position: relative;
  margin-left: 20px;
  width: 80%;
  padding: 5px;
}

.edit-profile-form{
  width: 200px;
  height: 20%;
  left: 24px;
  margin-top: 50%;
  text-align: center;
}

button.edit-profile-form{
  box-sizing: border-box;
  position: absolute;
  width: 186px;
  height: 40px;
  margin-top:20%;
  margin-bottom: 10%;
  margin-left: 1%;
  background: #000000;
  border: 1px solid #000000;
  border-radius: 4px;

}

/*set appropriate font and settings for the values of user profile*/
.user-form > p{
  position: relative;
  font-size: 14px;
  width: 200px;
  height: 15%;
  margin-top: 0%;
  margin-left: 30px;
  border: 1px solid white;
  border-radius: 4px;
  background: #350554;
  color: white;
  padding-top: 5%;
}

/*set appropriate button settings for edit profile button*/
button.user-form{
  box-sizing: border-box;
  position: absolute;
  width: 186px;
  height: 40px;
  margin-top: 10%;
  margin-bottom: 10px;
  margin-left: 4%;
  background: #000000;
  border: 1px solid #000000;
  border-radius: 4px;
}

a.user-form{
  box-sizing: border-box;
  position: absolute;
  width: 186px;
  height: 40px;
  margin-top: 10%;
  margin-bottom: 10px;
  margin-left: 4%;
  background: #000000;
  border: 1px solid #000000;
  border-radius: 4px;
}

span.user-title {
  font-family: inter-bold;
}

/*set appropriate settings for edit profile button*/
.user-reviews {
  margin-top: 7rem;
  margin-left: 20rem;
  width: 70%;
  text-align: left;
}

div.user-review {
  display: flex;
}

.user-review > p {
  margin-right: 20px;
}

/*review takes up 10/11 of width; grade, review date, rating take up 1/11*/
div.user-review > p:nth-of-type(2) {
  flex: 10;
}

div.user-review > form {
  flex: 10;
  margin-left: 0;
  margin-top: 15px;
}

.add-reviews{
  display: flex;
  justify-content: center;
}

.add-reviews-status {
  text-align: center;
}

.add_review_label {
  display:inline-block;
  width: 200px;
  /*margin-right: 30px;*/
  text-align: right;
  margin: 0px auto;
  padding-right: 30px;
}

#add_review_label2 {
  vertical-align: top;
  height: 200px;
}

.add_review_input {
  border:none;
  width:200px;
  margin:0px auto;
}
/* ... */

